# netalert-triage

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: rules.yml
docs/: heuristics.md  production.md
netalert/: __init__.py  correlate.py  decision.py  reporting.py  run.py
netalert/ingest/: alerts.py  gateway.py
netalert/integrations/: incident_api.py
netalert/rules/: blocked_category.py  filetype_anomaly.py  incomplete_transfer.py
sample_data/: sample_alerts.json  sample_gateway_logs.json
tests/: test_pipeline.py  test_rules.py
